# foliatest

./: .gitignore  .travis.yml  Makefile.am  NEWS  README  README.md  TODO  bootstrap.sh  configure.ac
.github/workflows/: cleanup.yml  foliatest.yml
src/: Makefile.am  edit_tests.cxx  engine_tests.cxx  foliapy_test.cxx  foliapy_tests.cxx  foliatest.cxx  sanity_tests.cxx  test.cxx  test_diff.sh  test_full.sh  testaction.sh  text_tests.cxx  tst.sh
tests/: PI.xml  PIenum.tree.ok  PInodes.txt.ok  aliases.xml  bidi.xml  bug-1.xml  bug-2.xml  bug21.xml  bug52-2.xml  bug52-3.xml  bug52.xml  build.old.xml  build.xml  chapter2.xml  comment.xml  corr_str.xml  corrected.xml  corrected_2.xml  corrected_3.xml  corrected_4.xml  dcoi.example  empty2.xml  entities.ok  entities.xml  enum.tree.216.ok  enum.tree.ok  example-buffer.ok  example.xml  example_1.xml  example_2.xml  examplev1.4.xml  examplev1.5.xml  fg.xml  folia-gap.example  folia.cmdi.xml  folia.example  folia.foreign.xml  folia.imdi.xml  folia.nsexample  foliadiff.sh  (+59 more)
